--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,11 @@ dist.jar=${dist.dir}/ImageExtractor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bson-2.13.3.jar=libraries/bson-2.13.3.jar
-file.reference.commons-collections4-4.1.jar=libraries/commons-collections4-4.1.jar
+file.reference.bson-3.0.4.jar=libraries/bson-3.0.4.jar
 file.reference.metadata-extractor-2.8.1.jar=libraries/metadata-extractor-2.8.1.jar
-file.reference.mongo-java-driver-2.13.3.jar=libraries/mongo-java-driver-2.13.3.jar
+file.reference.mongo-java-driver-3.0.4.jar=libraries/mongo-java-driver-3.0.4.jar
+file.reference.mongodb-driver-3.0.4.jar=libraries/mongodb-driver-3.0.4.jar
+file.reference.mongodb-driver-core-3.0.4.jar=libraries/mongodb-driver-core-3.0.4.jar
 file.reference.ojdbc6.jar=libraries/ojdbc6.jar
 file.reference.xmpcore-5.1.2.jar=libraries/xmpcore-5.1.2.jar
 includes=**
@@ -40,10 +41,11 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.metadata-extractor-2.8.1.jar}:\
     ${file.reference.xmpcore-5.1.2.jar}:\
-    ${file.reference.mongo-java-driver-2.13.3.jar}:\
-    ${file.reference.bson-2.13.3.jar}:\
     ${file.reference.ojdbc6.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}
+    ${file.reference.bson-3.0.4.jar}:\
+    ${file.reference.mongo-java-driver-3.0.4.jar}:\
+    ${file.reference.mongodb-driver-3.0.4.jar}:\
+    ${file.reference.mongodb-driver-core-3.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
